--- a/plonetheme/bootstrap/browser/templates/Products.TinyMCE.skins.tinymce.plugins.plonebrowser.css.plonebrowser.css
+++ b/plonetheme/bootstrap/browser/templates/Products.TinyMCE.skins.tinymce.plugins.plonebrowser.css.plonebrowser.css
@@ -7,7 +7,7 @@
 #plonebrowser .formHelp #internalpath span, #plonebrowser .formHelp #internalpath a { padding-left: 13px; }
 #externalimage_panel .field { margin-bottom: 10px; }
 #imgpreview { text-align: center; }
-#details_panel, #addimage_panel { border-left: 1px solid #CCC; padding-left: 6px; margin-left: -24.87%; }
+#details_panel, #addimage_panel { border-left: 1px solid #CCC; padding-left: 6px; }
 #details_panel h2 { color: #CCC; line-height: 1; margin-bottom: 10px; margin-left: 4px; }
 #details_panel .field { padding-bottom: 5px; }
 #details_panel #titledetails { line-height: 1; padding-bottom: 2px; }
@@ -57,8 +57,8 @@ input[disabled] { background: #F6F6F6; border: 1px solid #E6E6E6; color: #B2C3D9
 
 /* image plugin css */
 .thumbnail { border: 0.1em solid #fff; margin-top: 5px; overflow: hidden; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-.thumbnail:hover { border: 0.1em solid #ddd; position:absolute; width: 100%; z-index:2; }
-*+html .thumbnail:hover { position:relative; width: 100%; z-index:2; }
+.thumbnail:hover { border: 0.1em solid #ddd; position:absolute; z-index:2; }
+*+html .thumbnail:hover { position:relative; z-index:2; }
 .thumbnail:hover p { word-wrap: break-word; overflow:visible; text-overflow: visible; white-space:normal; }
 .thumbnail p { overflow: hidden; text-overflow: ellipsis; white-space:nowrap; margin-bottom: 0; text-align: center; padding:0 5px; }
 .thumbnail input { display: none; }
